# rust-microservice-template

./:  config.app.toml  .dockerignore  .env  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  config.app.toml  diesel.toml
.agents/skills/speckit-implement/: SKILL.md
.agents/skills/speckit-plan/: SKILL.md
.agents/skills/speckit-specify/: SKILL.md
.agents/skills/speckit-tasks/: SKILL.md
.cargo/: config.toml
.codex/prompts/: speckit.plan.md  speckit.specify.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: build-by-branch.yaml  build-by-tag.yaml  coverage.yaml  spec-artifacts.yaml
.specify/: init-options.json
.specify/memory/: constitution.md
.specify/scripts/powershell/: common.ps1  create-new-feature.ps1  update-agent-context.ps1
deployment/docker/: docker-compose-all.sh  docker-compose-app.yaml  docker-compose-infastructure.sh  docker-compose-infrastructure.yaml  docker-compose.sh
deployment/docker/postgres/: init.sql
specs/001-todo-soft-delete/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-soft-delete/checklists/: requirements.md
specs/001-todo-soft-delete/contracts/: audit-todo-item.yaml
specs/002-todo-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-search/checklists/: requirements.md
specs/002-todo-search/contracts/: todo-search-list.yaml
specs/003-auth-access-control/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-auth-access-control/checklists/: requirements.md
specs/003-auth-access-control/contracts/: auth-protected-api.yaml
specs/004-observability-metrics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-observability-metrics/checklists/: requirements.md
specs/004-observability-metrics/contracts/: observability-http.yaml
specs/005-typed-layer-errors/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-typed-layer-errors/checklists/: requirements.md
specs/005-typed-layer-errors/contracts/: http-error-contract.yaml
src/: config.rs  main.rs  schema.rs
src/application/: Cargo.toml
src/application/src/: commands.rs  dtos.rs  errors.rs  handlers.rs  lib.rs  mappers.rs  queries.rs  repositories.rs  services.rs  settings.rs
src/domain/: Cargo.toml
src/domain/src/: entities.rs  entity.rs  lib.rs  schema.rs
src/infrastructure/: Cargo.toml
src/infrastructure/src/: config.rs  errors.rs  lib.rs  migration.rs  postgres_repositories.rs
src/infrastructure/src/migrations/: V1__initial.sql
src/infrastructure/src/migrations/2024-12-24-095227_initial/: down.sql  up.sql
src/infrastructure/src/migrations/2026-03-10-160000_add_version_to_todo_items/: down.sql  up.sql
src/infrastructure/src/migrations/2026-03-16-120000_add_lifecycle_fields_to_todo_items/: up.sql
src/infrastructure/src/migrations/2026-03-22-000000_soft_delete_todo_items/: down.sql  up.sql
src/presentation/: Cargo.toml
src/presentation/src/: api.rs  api_doc.rs  config.rs  errors.rs  lib.rs  requests.rs  responses.rs
src/presentation/src/api/: api_doc.rs  api_health_check.rs  api_metrics.rs  app.rs  mod.rs
src/starter/: Cargo.toml
src/starter/src/: lib.rs  main.rs  observability.rs  settings.rs
src/starter/tests/: integration.rs  memory_management_tests.rs  mod.rs
src/starter/tests/utils/: mod.rs  server_utils.rs  test_server.rs
tests/: Cargo.toml  http-client.env.json
tests/integration/: Cargo.toml
tests/integration/src/: main.rs
tests/integration/tests/: integration.rs
tests/rest/: tests.http
tests/tests/: integration.rs
