[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
readonly.workspace = true
serde.workspace = true
async-trait.workspace = true
actix-web.workspace = true
deadpool-postgres.workspace = true
tokio-postgres.workspace = true
postgres-types.workspace = true
uuid.workspace = true

domain = { path = "../domain" }
