[package]
name = "application"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
readonly.workspace = true
serde.workspace = true
async-trait.workspace = true
tokio-postgres.workspace = true
uuid.workspace = true
anyhow.workspace = true
config.workspace = true

domain = { path = "../domain" }

[dev-dependencies]
serial_test.workspace = true
tokio.workspace = true
async-trait.workspace = true
