[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
refinery.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true
async-trait.workspace = true
deadpool-postgres.workspace = true
actix-web.workspace = true
uuid.workspace = true

domain = { path = "../domain" }
application = { path = "../application" }
