[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
actix-web.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true

domain = { path = "../domain" }
application = { path = "../application" }
