[package]
name = "presentation"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
readonly.workspace = true
uuid.workspace = true
utoipa.workspace = true
thiserror.workspace = true
anyhow.workspace = true

application = { path = "../application" }
infrastructure = { path = "../infrastructure" }

