[package]
name = "presentation"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
readonly.workspace = true
uuid.workspace = true
utoipa.workspace = true
anyhow.workspace = true
problem_details.workspace = true
http.workspace = true
diesel.workspace = true
tokio.workspace = true
validator.workspace = true
chrono.workspace = true
actix-web-httpauth.workspace = true

application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
domain = { path = "../domain" }


