[package]
name = "starter"
version = "0.5.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
env_logger.workspace = true
actix-web.workspace = true
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
dotenv.workspace = true
utoipa.workspace = true
utoipa-actix-web.workspace = true
utoipa-swagger-ui.workspace = true

application = { path = "../application" }
presentation = { path = "../presentation" }
infrastructure = { path = "../infrastructure" }

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
ctor.workspace = true
serial_test.workspace = true
uuid.workspace = true
async-trait.workspace = true
domain = { path = "../domain" }
