[package]
name = "starter"
version = "0.5.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
dotenv.workspace = true
utoipa.workspace = true
utoipa-actix-web.workspace = true
utoipa-swagger-ui.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
uuid.workspace = true

application = { path = "../application" }
presentation = { path = "../presentation" }
infrastructure = { path = "../infrastructure" }

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
ctor.workspace = true
serial_test.workspace = true
uuid.workspace = true
async-trait.workspace = true
serde_json.workspace = true
domain = { path = "../domain" }
